# catalogue

./: Cargo.toml  README.md  config.toml
src/: annotate.rs  catalogue_database.rs  lib.rs  main.rs  models.rs  scan.rs
tests/: integration.rs
