[package]
name = "catalogue"
version = "0.1.0"
authors = ["Adil Hasan <adilhasan2@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "categorise"
path = "src/main.rs"

[lib]
name = "category"
path = "src/lib.rs"

[dependencies]
structopt = "0.3.21"
rusqlite = "0.25.0"
assert_cmd = "1.0.3"
ring = "0.16.20"
data-encoding = "2.3.2"
walkdir = "2.3.2"
log = "0.4.14"
env_logger = "0.8.3"
serde = {version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5.8"
chrono = "0.4"